--- a/Frontend - familiar/FrontendFamiliarUCI/src/components/Header/header.css
+++ b/Frontend - familiar/FrontendFamiliarUCI/src/components/Header/header.css
@@ -1,13 +1,14 @@
 .header {
-    width: auto;
+    max-width: 100vw;
     background-color:#FFFFFF;
     color: #12346e;
     display: flex;
     align-items: center;
+    
     padding: 0 15px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.288);
     height: auto;
-    max-height: 13vw;
+    max-height: 12vw;
 }
 
 .logo{
