--- a/Frontend - familiar/FrontendFamiliarUCI/src/styles/inicio.css
+++ b/Frontend - familiar/FrontendFamiliarUCI/src/styles/inicio.css
@@ -1,33 +1,24 @@
 
 .container {
     max-width: 100vw;
-     /* Agregamos padding solo a los lados */
     text-align: justify;
-    background-color: #EFEFEF;
+    background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border: 5px solid #b1c700;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid red;
 }
 
-.shadow{
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
+
+
 .title {
     color: #12346e;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     margin-bottom: 26px;
-    text-align: center; /* Centramos el título */
+    text-align: center;
 }
-  
-  
-.all {
-    background-color: white;
-    border: 6px solid white;
-    padding: 6px;
-}
-  
 
-  
 .linea{
     border: 10px solid aliceblue;
 }
@@ -39,57 +30,59 @@
 }
 
 .background{
-    background-color: #1378b3;
+    background-color: white;
     text-align: center;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     box-shadow: black;
     color: aliceblue;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+    
+    height: auto;
+    max-height: 550px;
+    padding: 0px 0px;
+    margin-top: 10px;
+
 }
 
 .backimage{
-    height: 110%;
-    width: 50%;
+    height: auto;
+    width: 40%;
     padding:0px;
-    margin: 0px;
+    margin: none;
 }
 
 .backgroundtext{
+    background-color: #12346e;
     color: aliceblue;
     display: inline-block;
-    width: 50%;
-    padding-left: 2%;
-    padding-right: 3%;
+    max-width: 30%;
+    padding: 10vw;
     font-size: 10px;
-
 }
 
-.btninicio {
-    min-width:  100px;
-    padding:  15px; 
-    background-color: white; 
-    color:  #12346e; 
-    font-weight:  600;  
-    transition:  all .3s ease; 
-    outline: 0; 
-    width: 45%;
-    font-size: medium;
-    border-radius: 0px;
-    margin: 15px 10px 20px 10px;
-    border:none;
-}
-
-.btninicio:hover {
-    transform:  translateY(-3px);
-    box-shadow:  0 2px 6px -1px rgba(primary, .65);
-    background-color: #b1c700;
-    color: white;
-    cursor: pointer;
-  }
 
 .botones{
     width: 100%;
     display:flex;
     justify-content: space-evenly;
+}
+
+.personal{
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding-top: 10px;
+}
+.carousel{
+    width: 100%;
+    max-width: 85vw;
+}
+
+.outcarousel{
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+
 }
