--- a/Frontend - admin/src/styles/actualizarPaciente.css
+++ b/Frontend - admin/src/styles/actualizarPaciente.css
@@ -3,13 +3,13 @@
 }
 
 .bcerrar{
-    background-color: #12346e;
+    background-color: #EFEFEF;
     color: #FFFFFF;
     display: flex;
 }
 
 .cerrar{
-    background-color: #12346e;
+    background-color: #EFEFEF;
     color: #FFFFFF;
     margin: 10px;
     align-items: right;
