--- a/Frontend - familiar/FrontendFamiliarUCI/src/styles/inicio.css
+++ b/Frontend - familiar/FrontendFamiliarUCI/src/styles/inicio.css
@@ -8,7 +8,17 @@
     justify-content: center;
 }
 
+.menu{
+    width:100%;
+    background-color: #EFEFEF;
+    height: 60px;
+    align-items: left;
+    justify-content: left;
+    display: flex;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color: #EFEFEF;
 
+}
 
 .title {
     color: #12346e;
