--- a/Frontend - admin/src/components/BurgerMenu/burgermenu.css
+++ b/Frontend - admin/src/components/BurgerMenu/burgermenu.css
@@ -8,12 +8,12 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-    background: #fff;
+    background: #1E3A5F;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-    background: #ffffff;
+    background: #1378b3;
     
 }
 /* .bm-burger-button {
