--- a/Frontend - admin/src/components/Header/header.css
+++ b/Frontend - admin/src/components/Header/header.css
@@ -21,8 +21,8 @@
 .col1{
     width: 50%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
 }
 
 .hetitle{
@@ -31,38 +31,11 @@
     font-size: 20px;
 }
 
-.pestañas{
+.col2{
     width: 50%;
-}
-
-.header ul {
-    list-style: none;
     display: flex;
     justify-content: right;
     align-items: right;
-    padding: 5px;
-}
+    padding-right: 20px;
 
-.header ul li {
-    min-width: none;
-    text-align: center;
-}
-
-.header ul li a {
-    text-align: none;
-    text-decoration: none;
-    font-size: 16px;
-    padding: 3px;
-    color: #0A4A6E;
-    margin: 0px 10px;
-    
-}
-
-.header ul li a:hover {
-    color: #2f7bff;
-    /* color turquesa al pasar el mouse */
-}
-
-.link{
-    border-right: white 1px solid;
 }
