--- a/Frontend - admin/src/styles/login.css
+++ b/Frontend - admin/src/styles/login.css
@@ -4,12 +4,15 @@
     width: 96vw;
     max-width: 100vw;    
 }
-
+.locontall{
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+}
 .locontainer{
     padding: 20px 30px;
     text-align: center;
     background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     align-items: center;
     justify-content: center;
     align-content: center;
